<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/floralwhite"
    android:orientation="vertical" >

    <!--
    <Button
        android:id="@+id/flash_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textSize="30sp" />
    -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/flash_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/flashled_tip"
        android:textSize="18sp"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="6dip"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="5dp"
        android:background="@color/green" />

    <View
        android:id="@+id/view1"
        android:layout_width="fill_parent"
        android:layout_height="6dip"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="20dp"
        android:background="@color/green" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/item_Flash"
        style="@style/TextTitle"
         />
    
    <TextView 
        
        android:id="@+id/camera_exist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bcamera_no_exits"
        android:layout_below="@+id/flash_button"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:layout_marginTop="20dp"/>

    <ToggleButton
        android:id="@+id/flash_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="117dp"
        android:background="@drawable/selector_button"
        android:checked="true"
        android:textOff="@string/open"
        android:textOn="@string/close"
        android:textSize="25sp" />

</RelativeLayout>