<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/floralwhite">

    <!-- Title -->
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    	<TextView
    	    android:layout_marginTop="20dp"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_alignParentTop="true"
    	    android:layout_centerHorizontal="true"
    	    android:gravity="center"
    	    android:text="@string/Version"
    	    style="@style/TextTitle"/>
      </RelativeLayout>
      
      
	<LinearLayout 
		    android:layout_width="fill_parent" 
   		 	android:layout_height="wrap_content" 
   		 	android:orientation="vertical"
   		 	android:padding="5dp">
    	<LinearLayout
         android:layout_width="fill_parent" 
   		 android:layout_height="wrap_content" 
         android:layout_marginTop="10dp" 
         style="@style/textStyle">
        <TextView
            android:layout_height="match_parent"
	        android:layout_width="82dp"
	        android:id="@+id/swver"
            android:text="@string/sw_ver_"
            style="@style/textStyle"/>
        <TextView
            android:layout_height="match_parent"
	        android:layout_width="10dp"
	        android:text="@string/fenge"
            style="@style/textStyle" />
        <TextView
            android:id="@+id/sw1"
            android:layout_height="match_parent"
	        android:layout_width="wrap_content"
	        android:layout_marginLeft="10dp"
            style="@style/textStyle"/>
    </LinearLayout>  
    
  <LinearLayout
          android:layout_width="fill_parent" 
   		  android:layout_height="wrap_content"  >
 		<TextView
             android:layout_height="match_parent"
	         android:layout_width="82dp"
	         android:id="@+id/ser"
             android:text="@string/barcode_"
             style="@style/textStyle"/>
 		<TextView
            android:layout_height="match_parent"
	        android:layout_width="10dp"
	        android:text="@string/fenge"
            style="@style/textStyle"/>
         <TextView
             android:id="@+id/serial_text1"
             android:layout_height="match_parent"
	         android:layout_width="wrap_content"
	         android:layout_marginLeft="10dp"
             style="@style/textStyle"/>
     </LinearLayout>
     
  <LinearLayout
       	android:layout_width="fill_parent" 
 		android:layout_height="wrap_content" 
       	android:layout_marginTop="5dp" >
	    <TextView 
	         android:layout_height="match_parent"
	         android:layout_width="82dp"
	         android:id="@+id/Imei1"
	       	 android:text="@string/imei1_" 
	         style="@style/textStyle"/>  
	   <TextView
            android:layout_height="match_parent"
	        android:layout_width="10dp"
	        android:text="@string/fenge"
            style="@style/textStyle" />
	    <TextView android:id="@+id/imei1" 
	         android:layout_height="match_parent"
	         android:layout_width="wrap_content"
	         android:layout_marginLeft="10dp"
	         style="@style/textStyle"/>  
    </LinearLayout>
    
    <LinearLayout
         android:layout_width="fill_parent" 
   		 android:layout_height="wrap_content" > 
	     <TextView 
	         android:layout_height="match_parent"
	         android:layout_width="82dp"
	         android:id="@+id/Imei2"
	         android:text="@string/imie2_" 
	         style="@style/textStyle"/>  
	    <TextView
            android:layout_height="match_parent"
	        android:layout_width="10dp"
	        android:text="@string/fenge"
            style="@style/textStyle" />
	    <TextView 
	         android:id="@+id/imei2" 
	         android:layout_height="match_parent"
	         android:layout_width="wrap_content"
	         android:layout_marginLeft="10dp"
	         style="@style/textStyle"/>  
    </LinearLayout>
     <LinearLayout
         	android:layout_width="fill_parent" 
   			android:layout_height="wrap_content"  >
        <TextView
            android:layout_height="match_parent"
	        android:layout_width="82dp"
	        android:id="@+id/btaddr"
            android:text="@string/bt_addr_"
            style="@style/textStyle"/>
        <TextView
            android:layout_height="match_parent"
	        android:layout_width="10dp"
	        android:text="@string/fenge"
            style="@style/textStyle"/>
        <TextView
            android:id="@+id/btaddrc1"
            android:layout_height="wrap_content" 
	        android:layout_width="match_parent"
	        android:layout_marginLeft="10dp"
	        style="@style/textStyle"/>
    </LinearLayout>
    
     <LinearLayout
        android:layout_width="fill_parent" 
   		android:layout_height="wrap_content" >
        <TextView
            android:layout_height="match_parent"
	        android:layout_width="82dp"
	        android:id="@+id/wifi"
            android:text="@string/wifi_mac_"
            style="@style/textStyle"/>
         <TextView
            android:layout_height="match_parent"
	        android:layout_width="10dp"
	        android:text="@string/fenge"
            style="@style/textStyle" />
        <TextView
            android:id="@+id/wifimac1"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content" 
	        android:layout_width="match_parent"
	        style="@style/textStyle"></TextView>
    </LinearLayout>
</LinearLayout>
  
       
   <View 
      	 android:layout_marginTop="20dp"
         android:layout_height="6dip"
         android:layout_width="fill_parent" 
  		 android:background="@color/green" />  
  		 
   
   <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    	<TextView
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_alignParentTop="true"
    	    android:layout_marginTop="20dp"
    	    android:layout_centerHorizontal="true"
    	    android:gravity="center"
    	    android:text="@string/Battery"
    	    style="@style/TextTitle"/>
      </RelativeLayout>
      
   
   
   <LinearLayout 
         android:layout_width="match_parent"
   		 android:layout_height="wrap_content"
   		 android:orientation="vertical"
   		 android:padding="5dp">
    	 <LinearLayout 
         android:layout_width="match_parent"
   		 android:layout_height="wrap_content"
   		 android:layout_marginTop="10dp"
   		 android:orientation="horizontal">
	     <TextView 
	         android:text="@string/_batteryCharging"  
	         style="@style/textStyle"
	         android:layout_width="82dp"
	         android:layout_height="wrap_content" />  
	      <TextView
            android:layout_height="match_parent"
	        android:layout_width="10dp"
	        android:text="@string/fenge"
            style="@style/textStyle" />
	    <TextView android:id="@+id/textview_batteryCharging" 
	         android:layout_height="wrap_content" 
	         android:layout_width="wrap_content"
	         android:layout_marginLeft="10dp"
	         android:text="@string/_batteryCharging"
	         style="@style/textStyle"/>  
	 </LinearLayout>
 
 	
 	<LinearLayout 
 	     android:layout_marginTop="4dp"
         android:layout_width="match_parent"
   		 android:layout_height="wrap_content"
   		 android:orientation="horizontal" >
	     <TextView android:text="@string/chargingVol"  
	        style="@style/textStyle"
	        android:layout_width="82dp"
	        android:layout_height="wrap_content" />  
	     <TextView
            android:layout_height="match_parent"
	        android:layout_width="10dp"
	        android:text="@string/fenge"
            style="@style/textStyle" />
	    <TextView android:id="@+id/_textview_chargingVol" 
	        android:layout_height="wrap_content" 
	        android:layout_width="match_parent"
	        android:layout_marginLeft="10dp"
	        style="@style/textStyle"/>  
	  </LinearLayout>
 	
 	 <LinearLayout 
 	     android:layout_marginTop="4dp"
         android:layout_width="match_parent"
   		 android:layout_height="wrap_content"
   		 android:orientation="horizontal" >
	     <TextView android:text="@string/_chargingCurrent"  
	        style="@style/textStyle"
	        android:layout_width="82dp"
	        android:layout_height="wrap_content" />  
	     <TextView
            android:layout_height="match_parent"
	        android:layout_width="10dp"
	        android:text="@string/fenge"
            style="@style/textStyle" />
	    <TextView android:id="@+id/_textview_chargingCurrent" 
	        android:layout_height="wrap_content" 
	        android:layout_marginLeft="10dp"
	        android:layout_width="match_parent"
	        style="@style/textStyle"/>  
	  </LinearLayout>
   </LinearLayout>
 
  	

</LinearLayout> 

    
