<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView 
          android:id="@+id/mic_tingtong"
         android:textSize="30.0sp" 
         android:text="@string/tvrefmictest"
         android:layout_marginTop="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_alignParentTop="true"
         android:gravity="center|bottom"
         android:paddingBottom="4dp"/>
    </RelativeLayout>
    
    
     <LinearLayout 
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">
       <TextView 
             android:layout_marginTop="40dp"
             android:layout_marginLeft="75dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refmic"
         android:textSize="35.0dip"/>
        <TextView
            android:layout_marginTop="40dp"
            android:id="@+id/textview_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
              android:text="@string/open"
             android:textSize="20.0dip"  />
    </LinearLayout>

   
      
   
     
     

</LinearLayout>